# local-slope-stability-forecast

./: .env.template  .gitignore  API_trial_LSTM_RF.py  Dockerfile  README.md  azure-pipelines.yaml  fos_forecast.py  function_app.py  pyproject.toml
